added login instead model and js file

--- a/views/signup-model.handlebars
+++ b/views/signup-model.handlebars
@@ -1,6 +1,8 @@
 <div class="modal">
   <div class="modal-content">
-    <span class="close-button">×</span>
+
+    <h2>Signup!</h2>
+
     <form action="" id="signup-form">
       <label for="signup-username">Enter a username</label>
       <input type="text" name="signup-username" id="signUpUserName" />
@@ -8,6 +10,7 @@
       <input type="password" name="password" id="signUpPassword" />
 
       <button class="signup-btn" id="signup-button">signup</button>
+      <a href="/login"><h3>login Instead</h3></a>
     </form>
   </div>
 </div>
