--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     {{{body}}}
   </body>
 </html>
