--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,7 +3,7 @@
   <section class="row justify-content-center">
     <div class="col-md-10">
       <form id="form">
-        <input id="input" placeholder="Send a message"></input>
+        <input id="input" placeholder="Send a message..."></input>
         <button>Send <i class="fa fa-caret-right" aria-hidden="true"></i></button>
       </form>
     </div>
