--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,25 @@
-<div class="chat-container container">
+<header>
+  <div class="container">
+    <section class="row">
+      <div class="col-6">
+        <a href="/"><h1>ChatHub</h1></a>
+      </div>
+      <div class="col-6 d-flex align-items-center justify-content-end">
+        <span id="account-btn"><i class="fa fa-user-circle" aria-hidden="true"></i></span>
+      </div>
+    </section>
+  </div>
+</header>
+
+<div class="account-slideout">
+  <div class="slideout">
+    <div class="container">
+      <h2>Username</h2>
+    </div>
+  </div>
+</div>
+
+<main class="chat-container container">
   <ul id="messages"></ul>
   <section class="row justify-content-center">
     <div class="col-md-10">
@@ -8,7 +29,7 @@
       </form>
     </div>
   </section>
-</div>
+</main>
 
 <!-- script tag must be included in html to have access to the socket method -->
 <script src="/socket.io/socket.io.js"></script>
