fixed modal not rendering

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,111 +1,203 @@
+/* Fonts start */
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap");
+/* Fonts end */
+
+/* CSS Variables Start */
+:root {
+  --main-bg-color: #0d1117;
+  --main-second-bg-color: #161b22;
+  --main-text-color: #c9d1d9;
+  --main-highlight-color: #1f6feb;
+  --main-border-color: #30363d;
+}
+/* CSS Variables End */
+
+/* Global classes styling start */
 body {
   margin: 0;
-  background-color: #333;
+  background-color: var(--main-bg-color);
+  /* font-family: 'Source Code Pro', monospace; */
+  /* display: flex;
+  align-items: center; */
 }
 
-.chat-container {
-  width: 65vw;
-  background-color: white;
-  min-height: 600px;
-  max-height: 600px;
-  border-radius: 5px;
-  margin: 2rem auto;
-  overflow-y: scroll;
+a {
+  color: var(--main-text-color);
+  display: inline-block;
+}
+a:hover {
+  color: var(--main-highlight-color);
+}
+/* Global classes styling end */
+
+/* Header styling start */
+header {
+  background-color: var(--main-second-bg-color);
+  color: var(--main-text-color);
+  padding: 7px 0px;
+  margin-bottom: 30px;
+  position: relative;
+  z-index: 99;
+  border-bottom: 1px solid var(--main-border-color);
 }
 
-.msg-form {
-  background: rgba(0, 0, 0, 0.15);
-  padding: 0.25rem;
-  position: fixed;
-  bottom: 200px;
-  width: 50%;
-  margin: auto;
-  left: 0;
-  right: 0;
+header h1 {
+  font-weight: 300;
+}
+
+header a:hover {
+  text-decoration: none;
+  color: var(--main-text-color);
+}
+
+header span {
+  font-size: 36px;
+  cursor: pointer;
+}
+header span:hover {
+  transform: scale(1.1);
+}
+
+/* Header styling end */
+
+/* Chat styling start */
+/* Scroll bar styling start */
+.chat-container ul::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+.chat-container ul::-webkit-scrollbar-track {
+  background: var(--main-bg-color);
+  border-left: 1px solid var(--main-border-color);
+}
+
+/* Thumb */
+.chat-container ul::-webkit-scrollbar-thumb {
+  background: #21262d;
+  border-radius: 3px;
+  border-left: 1px solid var(--main-border-color);
+}
+
+/* Handle on hover */
+.chat-container ul::-webkit-scrollbar-thumb:hover {
+  background: var(--main-highlight-color);
+}
+/* Scroll bar styling end */
+
+.chat-container .profile-image {
+  width: 24px;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.chat-container ul {
+  background-color: var(--main-bg-color);
+  height: 500px;
+  width: 100%;
+  border-radius: 6px;
+  overflow-y: auto;
+  list-style-type: none;
+  margin: 0px;
+  color: var(--main-text-color);
+  padding: 0px;
+  border: 1px solid var(--main-border-color);
+}
+.chat-container li {
+  padding: 0.5rem 1rem;
+  border-bottom: 1px solid var(--main-border-color);
+}
+/* .chat-container li:nth-child(odd) {
+  background: #161b22;
+} */
+.chat-container li:hover {
+  background-color: var(--main-second-bg-color);
+}
+.chat-container form {
   display: flex;
-  height: 3rem;
-  box-sizing: border-box;
-  backdrop-filter: blur(10px);
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1em;
 }
-
-.msg-input {
+.chat-container input {
   border: none;
-  padding: 0 1rem;
-  flex-grow: 1;
-  border-radius: 2rem;
+  padding: 4px 10px;
+  border-radius: 6px;
+  width: 70%;
+  background: #fff;
+  font-size: 16px;
 }
-
-.msg-input:focus {
+.chat-container input:focus {
   outline: none;
 }
-
-.msg-btn {
-  background: #333;
+.chat-container input::placeholder {
+  color: #8b949e;
+}
+.chat-container button {
+  background: #238636;
   border: none;
-  padding: 0 1rem;
-  margin: 0.25rem;
-  border-radius: 3px;
+  margin-left: 7px;
+  border-radius: 6px;
   outline: none;
   color: #fff;
+  padding: 5px 16px;
+  font-size: 16px;
+  font-weight: 500;
+}
+.chat-container button i {
+  font-size: 15px;
+}
+.chat-container button:hover {
+  background: #2ea043;
 }
 
-.chat-messages {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+/* Mobile styling start */
+@media only screen and (max-width: 767px) {
+  .chat-container ul {
+    height: 420px;
+  }
 }
+/* Mobile styling end */
+/* Chat styling end */
 
-.chat-messages > li {
-  padding: 0.5rem 1rem;
-}
-
-.chat-messages > li:nth-child(odd) {
-  background: #efefef;
-}
-
-/* MODEL STYLES */
-.modal {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 1;
-  visibility: visible;
-  transform: scale(1.1);
-  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
-}
-
-.modal-content {
+/* Account slideout styling start */
+.account-slideout {
+  height: 100vh;
+  width: 400px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 1rem 1.5rem;
-  width: 24rem;
-  border-radius: 0.5rem;
+  right: 0px;
+  top: 0px;
+  z-index: 9;
+  overflow: hidden;
+  pointer-events: none;
 }
-
-.close-button {
-  float: right;
-  width: 1.5rem;
-  line-height: 1.5rem;
+.account-slideout .slideout {
+  height: 100%;
+  width: 100%;
+  background-color: var(--main-second-bg-color);
+  border-left: 1px solid var(--main-border-color);
+  transition: transform 0.5s ease-in-out;
+  transform: translateX(100%);
+  padding-top: 6em;
+  color: var(--main-text-color);
+}
+.account-slideout.active {
+  pointer-events: all;
+}
+.account-slideout.active .slideout {
+  transform: translateX(0%);
+}
+.account-slideout .slideout h2 {
   text-align: center;
-  cursor: pointer;
-  border-radius: 0.25rem;
-  background-color: lightgray;
+  font-weight: 300;
 }
-
-.close-button:hover {
-  background-color: darkgray;
+/* Mobile styling start */
+@media only screen and (max-width: 767px) {
+  .account-slideout {
+    width: 100vw;
+    border-left: none;
+  }
 }
-
-.hide-modal {
-  opacity: o;
-  visibility: hidden;
-  transform: scale(1);
-  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
-}
-/* END OF MODEL STYLES */
+/* Mobile styling end */
+/* Account slideout styling end */
