--- a/views/login-modal.handlebars
+++ b/views/login-modal.handlebars
@@ -1,5 +1,7 @@
-<div class="modal">
+{{!-- 
+<div class="modal"> --}}
   <div class="modal-content">
+
 
     <h2>Login!</h2>
 
@@ -13,5 +15,5 @@
       <a href="/signup"><h3>Signup Instead</h3></a>
     </form>
   </div>
-</div>
+{{!-- </div> --}}
 <script src="/js/login.js"></script>
