--- a/views/signup-modal.handlebars
+++ b/views/signup-modal.handlebars
@@ -1,9 +1,9 @@
-<div class="modal">
+{{!-- <div class="modal"> --}}
   <div class="modal-content">
 
     <h2>Signup!</h2>
 
-    <form action="" id="signup-form">
+    <form action="/public/js/logic.js" id="signup-form">
       <label for="signup-username">Enter a username</label>
       <input type="text" name="signup-username" id="signUpUserName" />
       <label for="password">Enter a password</label>
@@ -13,5 +13,5 @@
       <a href="/login"><h3>login Instead</h3></a>
     </form>
   </div>
-</div>
+{{!-- </div> --}}
 <script src="/js/signup.js"></script>
