--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,36 @@
-<div class="chat-container">
-  <ul id="messages" class="chat-messages"></ul>
+<header>
+  <div class="container">
+    <section class="row">
+      <div class="col-6">
+        <a href="/"><h1>ChatHub</h1></a>
+      </div>
+      <div class="col-6 d-flex align-items-center justify-content-end">
+        <span id="account-btn"><i class="fa fa-user-circle" aria-hidden="true"></i></span>
+      </div>
+    </section>
+  </div>
+</header>
+
+<div class="account-slideout">
+  <div class="slideout">
+    <div class="container">
+      <h2>Username</h2>
+    </div>
+  </div>
 </div>
 
-<form id="form" class="msg-form">
-  <input id="input" class="msg-input" /><button class="msg-btn">
-    Send
-  </button>
-</form>
+<main class="chat-container container">
+  <ul id="messages"></ul>
+  <section class="row justify-content-center">
+    <div class="col-md-10">
+      <form id="form">
+        <input id="input" placeholder="Send a message..."></input>
+        <button>Send <i class="fa fa-caret-right" aria-hidden="true"></i></button>
+      </form>
+    </div>
+  </section>
+</main>
+
 <!-- script tag must be included in html to have access to the socket method -->
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/logic.js"></script>
