--- a/views/partials/login-modal.handlebars
+++ b/views/partials/login-modal.handlebars
@@ -1,7 +1,5 @@
-{{!-- 
-<div class="modal"> --}}
-  <div class="modal-content">
-
+<div class="modal" id="login-modal">
+  <div class="content">
 
     <h2>Login!</h2>
 
@@ -15,5 +13,4 @@
       <a href="/signup"><h3>Signup Instead</h3></a>
     </form>
   </div>
-{{!-- </div> --}}
-<script src="/js/login.js"></script>
+</div>
