--- a/views/partials/signup-modal.handlebars
+++ b/views/partials/signup-modal.handlebars
@@ -1,5 +1,5 @@
-{{!-- <div class="modal"> --}}
-  <div class="modal-content">
+<div class="modal" id="signup-modal">
+  <div class="content">
 
     <h2>Signup!</h2>
 
@@ -13,5 +13,4 @@
       <a href="/login"><h3>login Instead</h3></a>
     </form>
   </div>
-{{!-- </div> --}}
-<script src="/js/signup.js"></script>
+</div>
