--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -1,42 +1,39 @@
 /* MODEL styling start */
-/* .modal {
+.modal {
   position: fixed;
   left: 0;
   top: 0;
+  display: flex;
   width: 100%;
-  height: 100%;
-  background-color: white;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+   transform: scale(1.1);
+  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s; 
+}
+.modal .content {
+  position: relative;
+  padding: 10px;
+  width: 400px;
+  height: 300px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  background-color: #fff;
+  box-shadow: rgba(112, 128, 175, 0.2) 0px 16px 24px 0px;
+  transform: scale(0);
+  transition: transform300ms cubic-bezier(0.57, 0.21, 0.69, 1.25);
+}
+
+.modal.open {
   opacity: 1;
   visibility: visible;
-  transform: scale(1.1);
-  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
-} */
-.modal-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 1rem 1.5rem;
-  width: 24rem;
-  border-radius: 0.5rem;
 }
-.close-button {
-  float: right;
-  width: 1.5rem;
-  line-height: 1.5rem;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 0.25rem;
-  background-color: lightgray;
-}
-.close-button:hover {
-  background-color: darkgray;
-}
-.hide-modal {
-  opacity: 0;
-  visibility: hidden;
+
+.modal.open .content {
   transform: scale(1);
-  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
+
 /* MODEL styling end */
