--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,4 @@
+<div class="modal-blur">
 <header>
   <div class="container">
     <section class="row">
@@ -6,6 +7,8 @@
       </div>
       <div class="col-6 d-flex align-items-center justify-content-end">
         <span id="account-btn"><i class="fa fa-user-circle" aria-hidden="true"></i></span>
+        <a href="#" class="log-in" id="login-link">Login</a>
+        <a href="#" class="log-in" id="signup-link">SignUp</a>
       </div>
     </section>
   </div>
@@ -30,7 +33,11 @@
     </div>
   </section>
 </main>
-
+</div>
+{{> login-modal}}
+{{> signup-modal}} 
 <!-- script tag must be included in html to have access to the socket method -->
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/logic.js"></script>
+<script src="/js/signup.js"></script>
+<script src="/js/login.js"></script>
