--- a/views/partials/login-modal.handlebars
+++ b/views/partials/login-modal.handlebars
@@ -5,11 +5,11 @@
 
     <form action="" id="login-form">
       <label for="login-username">Enter a username</label>
-      <input type="text" name="login-username" id="loginUserName" />
+      <input type="text" name="login-username" id="loginUserName" autocomplete="on"/>
       <label for="login-password">Enter a password</label>
-      <input type="password" name="login-password" id="loginPassword" />
+      <input type="password" name="login-password" id="loginPassword" autocomplete="on"/>
 
-      <button class="signup-btn" id="signup-button">Login</button>
+      <button class="signup-btn" id="login-button">Login</button>
       <a href="/signup"><h3>Signup Instead</h3></a>
     </form>
   </div>
