--- a/views/partials/signup-modal.handlebars
+++ b/views/partials/signup-modal.handlebars
@@ -1,13 +1,13 @@
 <div class="modal" id="signup-modal">
-  <div class="content">
+  <div class="content animate">
 
     <h2>Signup!</h2>
 
     <form action="/public/js/logic.js" id="signup-form">
       <label for="signup-username">Enter a username</label>
-      <input type="text" name="signup-username" id="signUpUserName" />
+      <input type="text" name="signup-username" id="signUpUserName" autocomplete="on"/>
       <label for="password">Enter a password</label>
-      <input type="password" name="password" id="signUpPassword" />
+      <input type="password" name="password" id="signUpPassword" autocomplete="on"/>
 
       <button class="signup-btn" id="signup-button">signup</button>
       <a href="/login"><h3>login Instead</h3></a>
