--- a/views/partials/signup-modal.handlebars
+++ b/views/partials/signup-modal.handlebars
@@ -1,5 +1,5 @@
 <div class="modal" id="signup-modal">
-  <div class="content animate">
+  <div class="content ">
 
     <h2>Signup!</h2>
 
@@ -10,7 +10,7 @@
       <input type="password" name="password" id="signUpPassword" autocomplete="on"/>
 
       <button class="signup-btn" id="signup-button">signup</button>
-      <a href="/login"><h3>login Instead</h3></a>
+      <a href="#" id="login-instead-link"><h3>login Instead</h3></a>
     </form>
   </div>
 </div>
