--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -8,8 +8,6 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
-  visibility: hidden;
-  opacity: 0;
   transform: scale(1.1);
   transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
@@ -28,16 +26,8 @@
   transition: scale;
 }
 
-.modal.open {
-  opacity: 1;
-  visibility: visible;
-}
-
-.modal.open .content {
+.modal .content {
   transform: scale(1);
 }
 
-.hide-modal {
-  visibility: hidden;
-}
 /* MODEL styling end */
