--- a/views/partials/login-modal.handlebars
+++ b/views/partials/login-modal.handlebars
@@ -5,12 +5,22 @@
 
     <form action="" id="login-form">
       <label for="login-username">Enter a username</label>
-      <input type="text" name="login-username" id="loginUserName" autocomplete="on"/>
+      <input
+        type="text"
+        name="login-username"
+        id="loginUserName"
+        autocomplete="on"
+      />
       <label for="login-password">Enter a password</label>
-      <input type="password" name="login-password" id="loginPassword" autocomplete="on"/>
+      <input
+        type="password"
+        name="login-password"
+        id="loginPassword"
+        autocomplete="on"
+      />
 
       <button class="signup-btn" id="login-button">Login</button>
-      <a href="/signup"><h3>Signup Instead</h3></a>
+      <a href="#" id="signup-instead-link"><h3>Signup Instead</h3></a>
     </form>
   </div>
 </div>
