live update when a user is online or offline

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <main class="chat-container container">
+    <main class="chat-container container " id="main-chat">
       <ul id="messages"></ul>
       <section class="row justify-content-center">
         <div class="col-md-10">
