--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -8,26 +8,74 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
-  transform: scale(1.1);
-  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
-.modal .content {
+.modal .content{
   position: relative;
   padding: 10px;
-  width: 400px;
   height: 300px;
+  width: 400px;
   border-radius: 8px;
+  border: 1px solid var(--main-border-color);
+  background-color: var(--main-bg-color);
   display: flex;
+  color: var(--main-text-color);
   justify-content: center;
-  background-color: #fff;
+  flex-direction: column;
+  align-items: center;
+  transition: all 0.5s;
+}
+
+.modal .content:hover{
   box-shadow: rgba(112, 128, 175, 0.2) 0px 16px 24px 0px;
-  transform: scale(0);
-  transition: transform300ms cubic-bezier(0.57, 0.21, 0.69, 1.25);
-  transition: scale;
+  transform: scale(1.1);
+  background-color: var(--main-second-bg-color);
 }
 
-.modal .content {
-  transform: scale(1);
+.log-forms{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.log-forms input, .log-forms button{
+  margin: 2px 0px;
+}
+.log-forms input{
+  border: none;
+  padding: 4px 10px;
+  border-radius: 6px;
+  background: #fff;
+  font-size: 16px;
+  text-align: center;
+}
+.log-forms button {
+  background: #238636;
+  border: none;
+  margin-left: 7px;
+  border-radius: 6px;
+  outline: none;
+  color: #fff;
+  padding: 5px 16px;
+  font-size: 16px;
+  font-weight: 500;
+  width: 120px;
 }
 
+.log-forms button:hover {
+  background: #2ea043;
+}
+
+.modal .content h2{
+  margin-bottom: 15px;
+}
+.modal .content h6{
+  margin-top: 1em;
+}
+
+/* Mobile styling start */
+@media only screen and (max-width: 767px) {
+  .modal .content{
+    width: 280px;
+  }
+}
+/* Mobile styling end */
 /* MODEL styling end */
