--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,7 @@
         <section class="row">
           <div class="col-6">
             <a href="/">
-              <h1>ChatHub</h1>
+              <h1 class="main-logo">"Dev HangOut"</h1>
             </a>
           </div>
           <div class="col-6 d-flex align-items-center justify-content-end">
@@ -32,7 +32,9 @@
       </div>
     </div>
 
+    
     <main class="chat-container container " id="main-chat">
+      <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>General</h2>
       <ul id="messages"></ul>
       <section class="row justify-content-center">
         <div class="col-md-10">
