--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,10 +12,11 @@
             </a>
           </div>
           <div class="col-md-6 col-3 d-flex align-items-center justify-content-end">
-            <h4 class="mb-0 me-2 d-md-block d-none fw-light">EXPLORE</h4>
+            <h4 class="mb-0 me-2 d-md-block d-none fw-light">Explore</h4>
             <button id="account-btn" class="hamburger">
                 <div class="bar"></div>
-            </button>          
+            </button>   
+            <img src="images/icons8-settings-64.png" alt="settings" class="settings" id="settings-link" height="46">       
           </div>
         </section>
       </div>
