--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -39,7 +39,7 @@
           <div class="list-container">
             <ul id="room-list" class="items-list">
               <li>Front-End Frat Party</li>
-              <li>Back-End Boyz</li>
+              <li>Back-End Buddy's</li>
               <li>JS Jugglers</li>                
               <li>Dev Advice</li>
               <li>Coding Companion</li>
