bug fixed with log in page crashing when user logs in to an active account

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -38,6 +38,7 @@
           <h3 class="accordion-heading">Rooms</h3>
           <div class="list-container">
             <ul id="room-list" class="items-list">
+              <li class="active-room">General</li>
               <li>Front-End Frat Party</li>
               <li>Back-End Buddy's</li>
               <li>JS Jugglers</li>                
