--- a/views/partials/login-modal.handlebars
+++ b/views/partials/login-modal.handlebars
@@ -1,7 +1,7 @@
 <div class="modal" id="login-modal">
   <div class="container d-flex justify-content-center">
     <div class="content">
-
+<h1 class="main-title">"Dev hangout"</h1>
       <h2>LOGIN</h2>
 
       <form action="" id="login-form" class="log-forms">
