--- a/views/partials/signup-modal.handlebars
+++ b/views/partials/signup-modal.handlebars
@@ -1,7 +1,7 @@
 <div class="modal" id="signup-modal">
   <div class="container d-flex justify-content-center">
     <div class="content">
-
+<h1 class="main-title">"Dev hangout"</h1>
       <h2>REGISTER</h2>
 
       <form action="/public/js/logic.js" id="signup-form" class="log-forms">
