add settings slideout with remove account btn

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -22,7 +22,7 @@
       </div>
     </header>
 
-    <div class="account-slideout">
+    <div class="account-slideout" id="explore-slide">
       <div class="slideout">
         <div class="container h-100">
           <div class="d-flex justify-content-center align-items-center mb-3 mt-2">
@@ -46,6 +46,14 @@
               <li>Coding Companion</li>
             </ul>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="account-slideout" id="settings-slide">
+      <div class="slideout">
+        <div class="container h-100">
+          <h3 class="hover-btn" id="remove-account">Remove Account</h3>         
         </div>
       </div>
     </div>
