--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -240,8 +240,16 @@ header span:hover {
   border-top: 1px solid var(--main-second-bg-color);
   position: relative;
   cursor: pointer;
+  transition: all 0.2s;
 }
-.account-slideout .slideout h3::after {
+
+.account-slideout .slideout h3.hover-btn:hover{
+  background-color: var(--main-second-bg-color);
+  color: var(--main-text-color);
+  border: 2px solid var(--main-text-color);
+}
+
+.account-slideout .slideout h3.accordion-heading::after {
   content: "\f078";
   font-family: FontAwesome;
   position: absolute;
