refactored logic.js

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -64,8 +64,8 @@
       <ul id="messages"></ul>
       <section class="row justify-content-center">
         <div class="col-md-10">
-          <form id="form">
-            <input id="input" placeholder="Send a message..."></input>
+          <form id="chat-form">
+            <input id="chat-input" placeholder="Send a message..."></input>
             <button>Send <i class="fa fa-caret-right" aria-hidden="true"></i></button>
           </form>
         </div>
