added database for rooms

--- a/views/front-end.handlebars
+++ b/views/front-end.handlebars
@@ -7,9 +7,9 @@
       <div class="container">
         <section class="row">
           <div class="col-md-6 col-9 d-flex align-items-center">
-
-            <h1 class="main-logo">"Dev HangOut"</h1>
-
+           
+              <h1 class="main-logo">"Dev HangOut"</h1>
+           
           </div>
           <div class="col-md-6 col-3 d-flex align-items-center justify-content-end">
             <h4 class="mb-0 me-2 d-md-block d-none fw-light">Explore</h4>
@@ -38,8 +38,8 @@
           <h3 class="accordion-heading">Rooms</h3>
           <div class="list-container">
             <ul id="room-list" class="items-list">
-              <li class="active-room">General</li>
-              <li>Front-End</li>
+              <li >General</li>
+              <li class="active-room">Front-End</li>
               <li>Back-End</li>
               <li>Dev-Advice</li>
             </ul>
@@ -58,7 +58,7 @@
 
 
     <main class="chat-container container " id="main-chat">
-      <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>General</h2>
+      <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>Front-End</h2>
       <ul id="messages"></ul>
       <section class="row justify-content-center">
         <div class="col-md-10">
