--- a/views/back-end.handlebars
+++ b/views/back-end.handlebars
@@ -38,9 +38,9 @@
           <h3 class="accordion-heading">Rooms</h3>
           <div class="list-container">
             <ul id="room-list" class="items-list">
-              <li >General</li>
-              <li class="active-room">Front-End</li>
-              <li>Back-End</li>
+              <li>General</li>
+              <li>Front-End</li>
+              <li class="active-room">Back-End</li>
               <li>Dev-Advice</li>
             </ul>
           </div>
@@ -58,7 +58,7 @@
 
 
     <main class="chat-container container " id="main-chat">
-      <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>Front-End</h2>
+      <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>Back-End</h2>
       <ul id="messages"></ul>
       <section class="row justify-content-center">
         <div class="col-md-10">
