--- a/views/dev-advice.handlebars
+++ b/views/dev-advice.handlebars
@@ -7,16 +7,16 @@
       <div class="container">
         <section class="row">
           <div class="col-md-6 col-9 d-flex align-items-center">
-
-            <h1 class="main-logo">"Dev HangOut"</h1>
-
+           
+              <h1 class="main-logo">"Dev HangOut"</h1>
+           
           </div>
           <div class="col-md-6 col-3 d-flex align-items-center justify-content-end">
             <h4 class="mb-0 me-2 d-md-block d-none fw-light">Explore</h4>
             <button id="account-btn" class="hamburger">
               <div class="bar"></div>
             </button>
-            <img src="images/icons8-settings-64.png" alt="settings" class="settings" id="settings-link" height="46">
+            <img src="/images/icons8-settings-64.png" alt="settings" class="settings" id="settings-link" height="46">
           </div>
         </section>
       </div>
@@ -38,10 +38,10 @@
           <h3 class="accordion-heading">Rooms</h3>
           <div class="list-container">
             <ul id="room-list" class="items-list">
-              <li class="active-room">General</li>
+              <li>General</li>
               <li>Front-End</li>
               <li>Back-End</li>
-              <li>Dev-Advice</li>
+              <li class="active-room">Dev-Advice</li>
             </ul>
           </div>
         </div>
@@ -58,7 +58,7 @@
 
 
     <main class="chat-container container " id="main-chat">
-      <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>General</h2>
+      <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>Dev-advice</h2>
       <ul id="messages"></ul>
       <section class="row justify-content-center">
         <div class="col-md-10">
