--- a/views/back-end.handlebars
+++ b/views/back-end.handlebars
@@ -26,7 +26,8 @@
       <div class="slideout">
         <div class="container h-100">
           <div class="d-flex justify-content-center align-items-center mb-3 mt-2">
-            <h2 id="slideout-username"></h2>
+           <img src='' class='account-pfp' id="current-user-pfp" ><img/>
+            <h2 id="slideout-username" class="slideout-current-username"></h2>
             {{#if loggedIn}}
             <a href="#" class="log-in" id="logout-link">Logout</a>
             {{/if}}
