--- a/views/general.handlebars
+++ b/views/general.handlebars
@@ -11,12 +11,22 @@
             <h1 class="main-logo">"Dev HangOut"</h1>
 
           </div>
-          <div class="col-md-6 col-3 d-flex align-items-center justify-content-end">
-            <h4 class="mb-0 me-2 d-md-block d-none fw-light">Explore</h4>
+          <div class="col-md-6 col-3 d-flex align-items-center justify-content-end gap-4">
+           
             <button id="account-btn" class="hamburger">
               <div class="bar"></div>
             </button>
-            <img src="/images/icons8-settings-64.png" alt="settings" class="settings" id="settings-link" height="46">
+            <div class="dropdown">
+              <img src="/images/icons8-settings-64.png" alt="settings" class="settings" id="settings-link" height="46">
+              <div class="dropdown-content">
+                <a href="#">Settings</a>
+                {{#if loggedIn}}
+                <a href="#" id="logout-link">Logout</a>
+                {{/if}}
+
+              </div>
+            </div>
+
           </div>
         </section>
       </div>
@@ -26,11 +36,9 @@
       <div class="slideout">
         <div class="container h-100">
           <div class="d-flex justify-content-center align-items-center mb-3 mt-2">
-            <img src='' class='account-pfp' id="current-user-pfp" ><img/>
+            <img src='' class='account-pfp' id="current-user-pfp"><img />
             <h2 id="slideout-username" class="slideout-current-username"></h2>
-            {{#if loggedIn}}
-            <a href="#" class="log-in" id="logout-link">Logout</a>
-            {{/if}}
+
           </div>
           <h3 class="accordion-heading">Users</h3>
           <div class="list-container">
@@ -48,16 +56,6 @@
         </div>
       </div>
     </div>
-
-    <div class="account-slideout" id="settings-slide">
-      <div class="slideout">
-        <div class="container h-100">
-          <h3 class="hover-btn" id="remove-account">Remove Account</h3>
-        </div>
-      </div>
-    </div>
-
-
     <main class="chat-container container " id="main-chat">
       <h2 class="room-title" id="room-name"> <span style="color: #949494;"># </span>General</h2>
       <ul id="messages"></ul>
