basic layout and functionality for settings page

--- a/views/general.handlebars
+++ b/views/general.handlebars
@@ -17,9 +17,9 @@
               <div class="bar"></div>
             </button>
             <div class="dropdown">
-              <img src="/images/icons8-settings-64.png" alt="settings" class="settings" id="settings-link" height="46">
+              <img src="/images/icons8-settings-64.png" alt="settings" class="settings"  height="46">
               <div class="dropdown-content">
-                <a href="#">Settings</a>
+                <a href="#" id="settings-link">Settings</a>
                 {{#if loggedIn}}
                 <a href="#" id="logout-link">Logout</a>
                 {{/if}}
