--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,6 +23,8 @@
     />
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/modal.css" />
+    <link rel="stylesheet" href="/css/settings.css" />
+
   </head>
   <body>
 
